--- a/calendar.html
+++ b/calendar.html
@@ -9,7 +9,7 @@
 	<div class="mobile-talk-message-panel-calendar-container">
 		<div class="mobile-talk-message-panel-calendar-panel">
 			<div class="mobile-talk-message-panel-calendar-participant-switcher">
-				<div class="mobile-talk-message-panel-calendar-participant-switcher-item" id="participant-switcher-item-1">
+				<div class="mobile-talk-message-panel-calendar-participant-switcher-item-selected" id="participant-switcher-item-1">
 					<div class="mobile-talk-message-panel-calendar-participant-switcher-item-avatar">
 						<img class="mobile-talk-message-panel-calendar-participant-switcher-item-avatar-image" src="img/avatar1.jpg"/>
 					</div>
@@ -19,7 +19,7 @@
 					<div class="mobile-talk-message-panel-calendar-participant-switcher-item-avatar">
 						<img class="mobile-talk-message-panel-calendar-participant-switcher-item-avatar-image" src="img/avatar2.jpg"/>
 					</div>
-					<div class="mobile-talk-message-panel-calendar-participant-switcher-item-username">Cheng Chi</div>
+					<div class="mobile-talk-message-panel-calendar-participant-switcher-item-username">Max</div>
 				</div>
 				<div class="mobile-talk-message-panel-calendar-participant-switcher-item" id="participant-switcher-item-3">
 					<div class="mobile-talk-message-panel-calendar-participant-switcher-item-avatar">
@@ -61,47 +61,47 @@
 				    <div class="mobile-talk-message-panel-calendar-table-hours-wrap">
 				    	<table>
 							<tr class="mobile-talk-message-panel-calendar-hour-panel" id="9am">
-								<td class="mobile-talk-message-panel-calendar-hour-panel-item"><span>9AM</span></td>
+								<td class="mobile-talk-message-panel-calendar-hour-panel-item"><span>09:00</span></td>
 							</tr>
 
 							<tr class="mobile-talk-message-panel-calendar-hour-panel" id="10am">
-								<td class="mobile-talk-message-panel-calendar-hour-panel-item"><span>10AM</span></td>
+								<td class="mobile-talk-message-panel-calendar-hour-panel-item"><span>10:00</span></td>
 							</tr>
 
 							<tr class="mobile-talk-message-panel-calendar-hour-panel" id="11am">
-								<td class="mobile-talk-message-panel-calendar-hour-panel-item"><span>11AM</span></td>
+								<td class="mobile-talk-message-panel-calendar-hour-panel-item"><span>11:00</span></td>
 							</tr>
 
 							<tr class="mobile-talk-message-panel-calendar-hour-panel" id="12pm">
-								<td class="mobile-talk-message-panel-calendar-hour-panel-item"><span>12PM</span></td>
+								<td class="mobile-talk-message-panel-calendar-hour-panel-item"><span>12:00</span></td>
 							</tr>
 
 							<tr class="mobile-talk-message-panel-calendar-hour-panel" id="1pm">
-								<td class="mobile-talk-message-panel-calendar-hour-panel-item"><span>1PM</span></td>
+								<td class="mobile-talk-message-panel-calendar-hour-panel-item"><span>13:00</span></td>
 							</tr>
 
 							<tr class="mobile-talk-message-panel-calendar-hour-panel" id="2pm">
-								<td class="mobile-talk-message-panel-calendar-hour-panel-item"><span>2PM</span></td>
+								<td class="mobile-talk-message-panel-calendar-hour-panel-item"><span>14:00</span></td>
 							</tr>
 
 							<tr class="mobile-talk-message-panel-calendar-hour-panel" id="3pm">
-								<td class="mobile-talk-message-panel-calendar-hour-panel-item"><span>3PM</span></td>
+								<td class="mobile-talk-message-panel-calendar-hour-panel-item"><span>15:00</span></td>
 							</tr>
 
 							<tr class="mobile-talk-message-panel-calendar-hour-panel" id="4pm">
-								<td class="mobile-talk-message-panel-calendar-hour-panel-item"><span>4PM</span></td>
+								<td class="mobile-talk-message-panel-calendar-hour-panel-item"><span>16:00</span></td>
 							</tr>
 
 							<tr class="mobile-talk-message-panel-calendar-hour-panel" id="5pm">
-								<td class="mobile-talk-message-panel-calendar-hour-panel-item"><span>5PM</span></td>
+								<td class="mobile-talk-message-panel-calendar-hour-panel-item"><span>17:00</span></td>
 							</tr>
 
 							<tr class="mobile-talk-message-panel-calendar-hour-panel" id="6pm">
-								<td class="mobile-talk-message-panel-calendar-hour-panel-item"><span>6PM</span></td>
+								<td class="mobile-talk-message-panel-calendar-hour-panel-item"><span>18:00</span></td>
 							</tr>
 
 							<tr class="mobile-talk-message-panel-calendar-hour-panel" id="7pm">
-								<td class="mobile-talk-message-panel-calendar-hour-panel-item"><span>7PM</span></td>
+								<td class="mobile-talk-message-panel-calendar-hour-panel-item"><span>19:00</span></td>
 							</tr>	
 						</table>
 				    </div>
@@ -110,17 +110,31 @@
 					<div class="mobile-talk-message-panel-calendar-table-event-wrap">
 						<table>
 							<tr class="mobile-talk-message-panel-calendar-event-panel" id="9am-events">
-								<td class="mobile-talk-message-panel-calendar-event-panel-item"><span>Work</span></td>
-								<td class="mobile-talk-message-panel-calendar-event-panel-item"><span>Reading</span></td>
-								<td class="mobile-talk-message-panel-calendar-event-panel-item"><span>Meeting 1</span></td>
-								<td class="mobile-talk-message-panel-calendar-event-panel-item"><span>EAT</span></td>
-								<td class="mobile-talk-message-panel-calendar-event-panel-item"><span>EAT</span></td>
-								<td class="mobile-talk-message-panel-calendar-event-panel-item"><span>Study</span></td>
-								<td class="mobile-talk-message-panel-calendar-event-panel-item"><span>EAT</span></td>
+								<td class="mobile-talk-message-panel-calendar-event-panel-item">
+									<div class="mobile-talk-message-panel-calendar-event-panel-item-content-active"><span>店舗向け提案書レビュー</span></div>
+								</td>
+								<td class="mobile-talk-message-panel-calendar-event-panel-item">
+									<div class="mobile-talk-message-panel-calendar-event-panel-item-content"><span>店舗向け提案書レビュー</span></div>
+								</td>
+								<td class="mobile-talk-message-panel-calendar-event-panel-item">
+									<div class="mobile-talk-message-panel-calendar-event-panel-item-content"><span>店舗向け提案書レビュー</span></div>
+								</td>
+								<td class="mobile-talk-message-panel-calendar-event-panel-item">
+									<div class="mobile-talk-message-panel-calendar-event-panel-item-content"><span>店舗向け提案書レビュー</span></div>
+								</td>
+								<td class="mobile-talk-message-panel-calendar-event-panel-item">
+									<div class="mobile-talk-message-panel-calendar-event-panel-item-content"><span>店舗向け提案書レビュー</span></div>
+								</td>
+								<td class="mobile-talk-message-panel-calendar-event-panel-item">
+									<div class="mobile-talk-message-panel-calendar-event-panel-item-content"><span>店舗向け提案書レビュー</span></div>
+								</td>
+								<td class="mobile-talk-message-panel-calendar-event-panel-item">
+									<div class="mobile-talk-message-panel-calendar-event-panel-item-content"><span>店舗向け提案書レビュー</span></div>
+								</td>
 							</tr>
 
 							<tr class="mobile-talk-message-panel-calendar-event-panel" id="10am-events">
-								<td class="mobile-talk-message-panel-calendar-event-panel-item"><span>Bang your mom</span></td>
+								<td class="mobile-talk-message-panel-calendar-event-panel-item"><span>Bang</span></td>
 								<td class="mobile-talk-message-panel-calendar-event-panel-item"><span>EAT</span></td>
 								<td class="mobile-talk-message-panel-calendar-event-panel-item"><span>Gym</span></td>
 								<td class="mobile-talk-message-panel-calendar-event-panel-item"><span>EAT</span></td>
@@ -202,7 +216,7 @@
 							<tr class="mobile-talk-message-panel-calendar-event-panel" id="6pm-events">
 								<td class="mobile-talk-message-panel-calendar-event-panel-item"><span>Gym</span></td>
 								<td class="mobile-talk-message-panel-calendar-event-panel-item"><span>EAT</span></td>
-								<td class="mobile-talk-message-panel-calendar-event-panel-item"><span>Bang your dad</span></td>
+								<td class="mobile-talk-message-panel-calendar-event-panel-item"><span>Bang</span></td>
 								<td class="mobile-talk-message-panel-calendar-event-panel-item"><span>EAT</span></td>
 								<td class="mobile-talk-message-panel-calendar-event-panel-item"><span>EAT</span></td>
 								<td class="mobile-talk-message-panel-calendar-event-panel-item"><span>Gym</span></td>
